# LightShoppe-Daemon

./: Array.c  Array.h  CorePlugin.c  CorePlugin.h  CoreRPC.c  CoreRPC.h  DBArr.c  DBArr.h  DBArrOps.c  DBArrOps.h  DBOps.c  DBOps.h  DMX.c  DMX.h  GarbageCollector.c  GarbageCollector.h  Makefile.am  Node.c  Node.h  NodeInstAPI.c  NodeInstAPI.h  OLAWrapper.cpp  OLAWrapper.h  PluginAPI.c  PluginAPI.h  PluginAPICore.h  PluginLoader.c  PluginLoader.h  README  SceneCore.c  SceneCore.h  arraynotes.txt  bootstrap.sh  build.sh  buildp.sh  cJSON.h  clean.sh  configure.ac  wiiconf
Plugins/: Makefile.am  build.sh  buildp.sh  clean.sh  faderPlugin.c  faderPlugin.h  plugininclude.m4  pluginlist.m4  wunderPlugin.c  wunderPlugin.h
Plugins/AnimationPlugin/: Makefile.am  Server.c  animationPlugin.css  animationPlugin.js  attackDecay.c  attackDecay.h  build.sh  buildp.sh  configure.ac  db.c  db.h
Plugins/AnimationPlugin/src/: Makefile.am  Server.c  attackDecay.c  attackDecay.h  db.c  db.h
Plugins/AnimationPlugin/web/: Client.json  Makefile.am  animationPlugin.css
Plugins/CORE/: CorePlugin.css  CorePlugin.js  Makefile.am
Plugins/ColourBankPlugin/: ColourBankClient.js  Makefile.am  Server.c  build.sh  buildp.sh  configure.ac
Plugins/ColourBankPlugin/src/: Makefile.am  Server.c
Plugins/ColourBankPlugin/web/: Client.json  ColourBankClient.css  ColourBankClient.js  Makefile.am
Plugins/FaderPlugin/: Client.json  FaderClient.js  Server.c  build.sh
Plugins/PalettePlugin/: Client.json  Gradient.c  Gradient.h  PalettePlugin.js  PaletteSampler.h  Server.c  buildp.sh  configure.ac  db.c  db.h
Plugins/PalettePlugin/src/: Gradient.c  Gradient.h  Makefile.am  PaletteSampler.h  Server.c  db.c  db.h
Plugins/PalettePlugin/web/: Makefile.am  PalettePlugin.css
Plugins/TimePlugin/: Client.json  Server.c  build.sh  buildp.sh  configure.ac
Plugins/TimePlugin/src/: Makefile.am  Server.c
Plugins/VisualiserPlugin/: PCMPipe.c  PCMPipe.h  Server.c  build.sh  buildp.sh  configure.ac
Plugins/VisualiserPlugin/src/: Makefile.am  PCMPipe.c  PCMPipe.h  Server.c
po/: POTFILES.in  en_US.po  messages.pot
src/: Array.c  CorePlugin.c  CorePlugin.h  CoreRPC.c  CoreRPC.h  DBArr.c  DBArr.h  DBArrOps.c  DBArrOps.h  DBOps.c  DBOps.h  DMX.c  DMX.h  GarbageCollector.c  Logging.c  Logging.h  Makefile.am  Node.h  NodeInstAPI.c  OLAWrapper.cpp  OLAWrapper.h  PluginAPI.c  PluginAPI.h  PluginAPICore.h  PluginLoader.c  PluginLoader.h  SceneCore.c  SceneCore.h  WiiMain.c  cJSON.c  cJSON.h  lsduc.cfg
src/wii/: Makefile.am  meta.xml
web/: LSDClient.css  LSDClient.js  LSDClientIF.js  Makefile.am  README  index.html
web/COREPlugin/: Client.json  CorePlugin.js
web/farbtastic/: farbtastic.js
web/imageuploader/: fileuploader.css  fileuploader.js  imageuploader.php
web/jquery-ui/themes/custom-theme/: jquery-ui-1.8.12.custom.css
