ACLOCAL_AMFLAGS = -I m4

nobase_web_DATA = \
farbtastic/farbtastic.css \
farbtastic/farbtastic.js \
farbtastic/marker.png \
farbtastic/mask.png \
farbtastic/wheel.png \
images/icon_gear.svg \
images/icon_in.svg \
images/icon_out.svg \
images/icon_palette.svg \
images/icon_trash.svg \
images/lsdHeadBar.png \
images/lsdHeadSep.png \
imageuploader/fileuploader.css \
imageuploader/fileuploader.js \
imageuploader/gpl-2.0.txt \
imageuploader/imageuploader.php \
imageuploader/license.txt \
imageuploader/loading.gif \
index.html \
LSDClient.css \
LSDClient.js \
LSDClientIF.js