ACLOCAL_AMFLAGS = -I m4

nobase_web_DATA = \
farbtastic/farbtastic.css \
farbtastic/farbtastic.js \
farbtastic/marker.png \
farbtastic/mask.png \
farbtastic/wheel.png \
images/icon_gear.svg \
images/icon_in.svg \
images/icon_out.svg \
images/icon_palette.svg \
images/icon_trash.svg \
images/lsdHeadBar.png \
images/lsdHeadSep.png \
imageuploader/fileuploader.css \
imageuploader/fileuploader.js \
imageuploader/gpl-2.0.txt \
imageuploader/imageuploader.php \
imageuploader/license.txt \
imageuploader/loading.gif \
jquery/jquery.min.js \
jquery-ui/jquery-ui.min.js \
jquery-ui/themes/base/images/ui-bg_glass_75_dadada_1x400.png \
jquery-ui/themes/base/images/ui-bg_glass_95_fef1ec_1x400.png \
jquery-ui/themes/base/images/ui-icons_454545_256x240.png \
jquery-ui/themes/base/images/ui-icons_222222_256x240.png \
jquery-ui/themes/base/images/ui-bg_flat_0_aaaaaa_40x100.png \
jquery-ui/themes/base/images/ui-icons_2e83ff_256x240.png \
jquery-ui/themes/base/images/ui-icons_cd0a0a_256x240.png \
jquery-ui/themes/base/images/ui-bg_glass_55_fbf9ee_1x400.png \
jquery-ui/themes/base/images/ui-bg_highlight-soft_75_cccccc_1x100.png \
jquery-ui/themes/base/images/ui-icons_888888_256x240.png \
jquery-ui/themes/base/images/ui-bg_glass_75_e6e6e6_1x400.png \
jquery-ui/themes/base/images/ui-bg_glass_65_ffffff_1x400.png \
jquery-ui/themes/base/images/ui-bg_flat_75_ffffff_40x100.png \
jquery-ui/themes/base/jquery.ui.slider.css \
jquery-ui/themes/base/jquery.ui.selectable.css \
jquery-ui/themes/base/jquery.ui.datepicker.css \
jquery-ui/themes/base/jquery.ui.dialog.css \
jquery-ui/themes/base/jquery.ui.theme.css \
jquery-ui/themes/base/jquery.ui.resizable.css \
jquery-ui/themes/base/jquery.ui.base.css \
jquery-ui/themes/base/jquery.ui.button.css \
jquery-ui/themes/base/jquery.ui.core.css \
jquery-ui/themes/base/jquery.ui.all.css \
jquery-ui/themes/base/jquery.ui.progressbar.css \
jquery-ui/themes/base/jquery.ui.tabs.css \
jquery-ui/themes/base/jquery.ui.autocomplete.css \
jquery-ui/themes/base/jquery.ui.accordion.css \
jquery-ui/themes/custom-theme/images/ui-bg_highlight-soft_25_30273a_1x100.png \
jquery-ui/themes/custom-theme/images/ui-bg_diagonals-medium_10_000000_40x40.png \
jquery-ui/themes/custom-theme/images/ui-bg_flat_0_000000_40x100.png \
jquery-ui/themes/custom-theme/images/ui-bg_highlight-soft_100_dcd9de_1x100.png \
jquery-ui/themes/custom-theme/images/ui-icons_8d78a5_256x240.png \
jquery-ui/themes/custom-theme/images/ui-icons_454545_256x240.png \
jquery-ui/themes/custom-theme/images/ui-bg_flat_55_994d53_40x100.png \
jquery-ui/themes/custom-theme/images/ui-bg_gloss-wave_30_3d3644_500x100.png \
jquery-ui/themes/custom-theme/images/ui-icons_ffffff_256x240.png \
jquery-ui/themes/custom-theme/images/ui-icons_734d99_256x240.png \
jquery-ui/themes/custom-theme/images/ui-bg_highlight-soft_45_5f5964_1x100.png \
jquery-ui/themes/custom-theme/images/ui-bg_highlight-soft_100_eae6ea_1x100.png \
jquery-ui/themes/custom-theme/images/ui-icons_ebccce_256x240.png \
jquery-ui/themes/custom-theme/images/ui-icons_a8a3ae_256x240.png \
jquery-ui/themes/custom-theme/images/ui-bg_flat_55_fafafa_40x100.png \
jquery-ui/themes/custom-theme/jquery-ui-1.8.12.custom.css \
jquery-ui/ui/i18n/jquery.ui.datepicker-da.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-hy.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-zh-CN.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-tr.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-de.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ar.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-zh-HK.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-is.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-nl.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ja.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-et.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ml.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-lt.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-bg.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-gl.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sv.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-bs.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-lv.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-es.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-tj.js \
jquery-ui/ui/i18n/jquery-ui-i18n.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-hu.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ca.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-th.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ms.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-cs.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ar-DZ.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-fa.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sr.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-pl.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-eo.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-id.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-rm.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-no.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ru.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-uk.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-af.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-vi.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-hr.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-fi.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-he.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-zh-TW.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-az.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-kz.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-fr-CH.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-en-GB.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-en-AU.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sq.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-el.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-fr.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ko.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ro.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-it.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sk.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sr-SR.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-fo.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-ta.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-pt-BR.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-sl.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-pt.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-en-NZ.js \
jquery-ui/ui/i18n/jquery.ui.datepicker-eu.js \
jquery-ui/ui/jquery-ui-1.8.12.custom.js \
jquery-ui/ui/jquery.ui.accordion.js \
jquery-ui/ui/jquery.ui.progressbar.js \
jquery-ui/ui/jquery.ui.core.js \
jquery-ui/ui/jquery.ui.sortable.js \
jquery-ui/ui/jquery.effects.clip.js \
jquery-ui/ui/jquery.ui.position.js \
jquery-ui/ui/jquery.effects.blind.js \
jquery-ui/ui/jquery.effects.pulsate.js \
jquery-ui/ui/jquery.ui.dialog.js \
jquery-ui/ui/jquery.ui.autocomplete.js \
jquery-ui/ui/jquery.effects.core.js \
jquery-ui/ui/jquery.ui.droppable.js \
jquery-ui/ui/jquery.ui.slider.js \
jquery-ui/ui/jquery.effects.scale.js \
jquery-ui/ui/jquery.ui.resizable.js \
jquery-ui/ui/jquery.effects.fade.js \
jquery-ui/ui/jquery.ui.mouse.js \
jquery-ui/ui/jquery.ui.button.js \
jquery-ui/ui/jquery.effects.drop.js \
jquery-ui/ui/jquery.ui.tabs.js \
jquery-ui/ui/jquery.effects.bounce.js \
jquery-ui/ui/jquery.effects.explode.js \
jquery-ui/ui/jquery.effects.fold.js \
jquery-ui/ui/jquery.ui.datepicker.js \
jquery-ui/ui/jquery.effects.transfer.js \
jquery-ui/ui/jquery.effects.slide.js \
jquery-ui/ui/jquery.ui.selectable.js \
jquery-ui/ui/jquery.ui.widget.js \
jquery-ui/ui/jquery.ui.draggable.js \
jquery-ui/ui/jquery.effects.highlight.js \
jquery-ui/ui/jquery.effects.shake.js \
index.html \
LSDClient.css \
LSDClient.js \
LSDClientIF.js \
favicon.ico